tests/functional/data/transpiler/common/errors/restrict/applied_to_non_pointer2.err
applied_to_non_pointer2.cpp:1:1: error: 'okl_restrict': only applies to pointer type
    1 | @restrict int get0() {
      | ^
